659 tx sender hangs (#686)
* add swagger tags to api endpoints

* #659 notify user about invalid tessera from key

* #659 add e2e tests

* add PR template
