# services/api/service/controllers/schedules.go
@@ -34,6 +34,7 @@ func (c *SchedulesController) Append(router *mux.Router) {
 
 // @Summary Creates a new Schedule
 // @Description Creates a new schedule
+// @Tags Schedules
 // @Accept json
 // @Produce json
 // @Security ApiKeyAuth
@@ -67,6 +68,7 @@ func (c *SchedulesController) create(rw http.ResponseWriter, request *http.Reque
 
 // @Summary Fetch a schedule by uuid
 // @Description Fetch a single schedule by uuid
+// @Tags Schedules
 // @Produce json
 // @Security ApiKeyAuth
 // @Security JWTAuth
@@ -93,6 +95,7 @@ func (c *SchedulesController) getOne(rw http.ResponseWriter, request *http.Reque
 
 // @Summary Get all schedules
 // @Description Get all schedules
+// @Tags Schedules
 // @Produce json
 // @Security ApiKeyAuth
 // @Security JWTAuth
